syntax = "proto3";

package user;

option go_package = "tiwabet-backend/proto/userpb";

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetUserResponse {
    int64 user_id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
}